//一站到底
package Platform.ModelF30071;
option java_package = "com.enuos.live.proto.f30071msg";
option java_outer_classname = "F30071";

//进入游戏 0
message F30071S2C {
  required int32 result = 1; //结果码 0「成功」 1「房间已失效」 2「获取数据失败」
  repeated PlayerInfo player = 2; //玩家信息
}

//玩家列表
message PlayerInfo {
  required string nick = 1; //玩家昵称「例如：Lake😀」
  required int64 userID = 2; //玩家ID「例如：1234567890」
  required string url = 3; //玩家头像「例如：http://pic1.zhimg.com/50/v2-fbe356c74816b9b3cfcf80ff1758fbd4_hd.jpg」
  required int32 sex = 4; //玩家性别 1「男」 2「女」
  required int32 red = 5; //玩家身份 1「红方」 2「蓝方」
  optional int32 score = 6; //玩家分数「例如：25」
  optional int32 isDoubleCard = 7; //是否有加倍 0「是」 1「否」
  optional string iconFrame = 8; // 头像框
}

//开始游戏/回合开始 1
message F300711S2C {
  required string questionType = 1; //题类型「例如：常识」
  required int32 gameRound = 2; //当前题回合「例如：1」
  required int32 allGameRound = 3; //总题回合「默认：10」
  required int32 lastTimes = 4; //操作时间「默认：3(s)」
  optional int32 isDoubleCard = 5; //是否有加倍 0「是」 1「否」
  optional int32 doubleCardNum = 6; //第几次使用加倍卡「例如：2」
}

//加倍返回 2
message F300712S2C {
  required int64 doubleUserID = 1; //玩家id「例如：1234567890」
}

//展示题目 3
message F300713S2C {
  required string topicDescribe = 1; //题描述「例如：于2012年提出破产保护的原世界最大的照相机，胶卷生产供应商是哪家？」  
}

//展示选项 4
message F300714S2C {
  required int32 lastTimes = 1; //操作时间「默认：15(s)」
  repeated AnswerList answers = 2; //答案选项
}
message AnswerList {
  required int32 answerIndex = 1; //答案Index「例如：1」
  required string answerDescribe = 2; //答案描述「例如：柯达」
}

//选择答案 5
message F300715C2S {
  required int32 answerIndex = 1; //答案Index「例如：1」
}
message F300715S2C {
  repeated SelectAnswer selectAnswer = 1; // 选择答案
}
message SelectAnswer {
  required int64 actionUserID = 1; //操作玩家「例如：1234567890」
  required int32 actionTime = 2; //操作时间「例如：5(s)」
  required string iconPath = 3; //玩家头像「例如：http://pic1.zhimg.com/50/v2-fbe356c74816b9b3cfcf80ff1758fbd4_hd.jpg」
  required int32 answerIndex = 4; //答案Index「例如：1」
}

//回合结算 6
message F300716S2C {
  required int32 answerCorrect = 1; //正确答案Index
  repeated EndInfo settlementInfo = 2; //玩家信息
}
message EndInfo {
  required int64 userID = 1; //玩家ID「例如：1234567890」
  required int32 answerIndex = 2; //答案Index「例如：1」
  required int32 allScoreNum = 3; //分数「例如：20」
  required int32 currentScore = 4; //当前分数「例如：125」
}

//游戏结算 7
message F300717S2C {
  required int64 userID = 1; //胜利玩家ID「例如：1234567890」
  required int32 addExp = 2; //增加经验「例如：2/0」
  required int32 addGold = 3; //增加金币「例如：10/0」
  optional int32 isDouble = 4; //默认是0  0.不加倍  1.加倍
}

//断线重连 8
message F300718S2C {
  repeated PlayerInfo breakLineInfo = 1; //断线玩家信息
  required int32 currtTopic = 2; //当前题回合「例如：1」
  required int32 allCurrtTopic = 3; //总题回合「默认：10」
  optional string topicDescribe = 4; //题描述「例如：于2012年提出破产保护的原世界最大的照相机，胶卷生产供应商是哪家？」  
  repeated AnswerList answers = 5; //答案选项
  optional F300711S2C startInfo = 6; //开始信息
  optional F300715S2C playerSelect = 7; //玩家选择 
  optional int32 lastTimes = 8; //操作时间「例如：10(s)」
}

//题目报错 9
message F300719S2C {
  required int32 result = 1; //结果「默认：0」 
}

// 10  结算之后点击确定 给服务器发消息 服务器给App端发消息关闭游戏